# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.225 2005/04/20 19:48:29 wolf31o2 Exp $

  20 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/support/livecdfs-update.sh:
  Updated all instances of livecd/type: gentoo-release-environmental to
  gentoo-release-livecd and added generic-livecd.

  20 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/fsscript.sh.example, examples/gamecd.conf.example,
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot_template.spec,
  examples/snapshot_template.spec:
  Imported example files from catalyst 1.1.9 to make them more verbose.

  18 Apr 2005; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
  Fix grp/use bug #89365

  15 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/kmerge.sh:
  Fixes for initramfs overlay support.

  15 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/kmerge.sh,
  targets/support/pre-kmerge.sh:
  Fix ctrl-c error if pre-kmerge.sh is running by sourcing
  /tmp/chroot-functions.sh and removed extra equal sign to fix a genkernel
  caching bug; Also adding preliminary support for initramfs_overlay from genkernel

  14 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/kmerge.sh:
  Removed support for postconf as genkernel no longer has that option

  14 Apr 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/netboot_target.py,