@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage2_target.py,v 1.34 2005/04/14 14:59:48 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage2_target.py,v 1.35 2005/04/20 20:29:03 wolf31o2 Exp $
 
 """
 Builder class for a LiveCD stage2 build.
@@ -22,7 +22,7 @@ class livecd_stage2_target(generic_stage_target):
 			"livecd/motd","livecd/overlay","livecd/modblacklist","livecd/splash_theme",\
 			"livecd/rcadd","livecd/rcdel","livecd/fsscript","livecd/xinitrc",\
 			"livecd/root_overlay","livecd/devmanager","livecd/splash_type",\
-			"gamecd/conf","portage_overlay"])
+			"gamecd/conf","livecd/users","portage_overlay"])
 		
 		generic_stage_target.__init__(self,spec,addlargs)
 		
